--- a/sw/uiconfig/swriter/ui/captionoptions.ui
+++ b/sw/uiconfig/swriter/ui/captionoptions.ui
@@ -105,8 +105,7 @@
                         <property name="hexpand">True</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|level">Specify the number of outline levels of the immediately prior heading number to prepend to the caption number. For example, select “2” to use the first two numbers in the heading. If [None] is selected, then no heading number is prepended.
-.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|level">Specify the number of outline levels to display before  the caption number. For example, select “2” to display  two heading level numbers. If [None] is selected, then no heading number is displayed.</property>
                           </object>
                         </child>
                       </object>
@@ -124,7 +123,7 @@
                         <property name="truncate-multiline">True</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="separator-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|separator">Enter the character that you want to insert between the chapter number and the caption number.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extended_tip|separator">Enter the character to separate the heading numbers from the caption number.</property>
                           </object>
                         </child>
                       </object>
@@ -307,6 +306,11 @@
                           <item translatable="yes" context="captionoptions|liststore1">Category first</item>
                           <item translatable="yes" context="captionoptions|liststore1">Numbering first</item>
                         </items>
+                        <child internal-child="accessible">
+                          <object class="AtkObject" id="caption_order-atkobject">
+                            <property name="AtkObject::accessible-description" translatable="yes" context="captionoptions|extented_tip|caption_order">Place the caption number before or after the caption category.</property>
+                          </object>
+                        </child>
                       </object>
                       <packing>
                         <property name="left-attach">1</property>
