tdf#154034  correction to tooltips  "outline" -> "index"
Change-Id: Ic8024be1615103c2b367ff0b90cae42e38c4654f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148328
Tested-by: Jenkins
Reviewed-by: Seth Chaiklin <sdc.blanco@youmail.dk>

--- a/sw/uiconfig/swriter/ui/assignstylesdialog.ui
+++ b/sw/uiconfig/swriter/ui/assignstylesdialog.ui
@@ -194,7 +194,7 @@
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="receives-default">True</property>
-                            <property name="tooltip-text" translatable="yes" context="assignstylesdialog|left|tooltip_text">Promote outline level</property>
+                            <property name="tooltip-text" translatable="yes" context="assignstylesdialog|left|tooltip_text">Promote index level</property>
                             <property name="image">image1</property>
                             <property name="always-show-image">True</property>
                             <child internal-child="accessible">
@@ -215,7 +215,7 @@
                             <property name="visible">True</property>
                             <property name="can-focus">True</property>
                             <property name="receives-default">True</property>
-                            <property name="tooltip-text" translatable="yes" context="assignstylesdialog|right|tooltip_text">Demote outline level</property>
+                            <property name="tooltip-text" translatable="yes" context="assignstylesdialog|right|tooltip_text">Demote index level</property>
                             <property name="image">image2</property>
                             <property name="always-show-image">True</property>
                             <child internal-child="accessible">
