tdf#153637 "Use level from source chapter" -> "Use outline level"
    Rename option label; add tooltip; revise extended tip

Change-Id: Idf705bc51d2311e331ab2b7c35bff2963cf20376
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148330
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/tocindexpage.ui
+++ b/sw/uiconfig/swriter/ui/tocindexpage.ui
@@ -465,16 +465,17 @@
                     </child>
                     <child>
                       <object class="GtkCheckButton" id="uselevel">
-                        <property name="label" translatable="yes" context="tocindexpage|uselevel">Use level from source chapter</property>
+                        <property name="label" translatable="yes" context="tocindexpage|uselevel">Use outline level</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
                         <property name="margin-start">12</property>
                         <property name="use-underline">True</property>
                         <property name="draw-indicator">True</property>
+                        <property name="tooltip-text" translatable="yes" context="tocindexpage|uselevel|tooltip_text">Assign index level according to the outline level of the heading immediately prior to the object.</property>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="uselevel-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|uselevel">Indents table, graphic, frame, and OLE object index entries according their place in the chapter heading hierarchy.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|uselevel">Assign index level to table, graphic, frame, and OLE objects according to the outline level of the heading immediately prior to the object. For example, if “Tables” is selected, then each table in the document is assigned an index level that corresponds to the outline level of the first heading before the table (i.e., a table is assigned index level 3 if it follows a heading with outline level 3). With default settings, larger index levels are indented more in the Table of Contents. Use the “Entries” tab to customize the formatting and indentation for each index level.</property>
                           </object>
                         </child>
                       </object>
