tdf#153735 update tooltip because outline level "Text Body" -> "None"
Change-Id: I2af0ba85bcd30c89e7948d6057ccbb6a1e64f449
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148503
Tested-by: Jenkins
Reviewed-by: Seth Chaiklin <sdc.blanco@youmail.dk>

--- a/sw/uiconfig/swriter/ui/tocindexpage.ui
+++ b/sw/uiconfig/swriter/ui/tocindexpage.ui
@@ -503,7 +503,7 @@
                                 <property name="visible">True</property>
                                 <property name="can-focus">True</property>
                                 <property name="receives-default">False</property>
-                                <property name="tooltip-text" translatable="yes" context="tocindexpage|addstylescb|tooltip_text">Include selected paragraph styles with outline level “Text Body” in the index.</property>
+                                <property name="tooltip-text" translatable="yes" context="tocindexpage|addstylescb|tooltip_text">Include selected paragraph styles in the index. Click the “Assign Styles” button.</property>
                                 <property name="use-underline">True</property>
                                 <property name="draw-indicator">True</property>
                                 <child internal-child="accessible">
