--- a/sw/uiconfig/swriter/ui/fldvarpage.ui
+++ b/sw/uiconfig/swriter/ui/fldvarpage.ui
@@ -402,7 +402,7 @@
                       <object class="GtkLabel" id="label5">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="label" translatable="yes" context="fldvarpage|label5">_Outline level:</property>
+                        <property name="label" translatable="yes" context="fldvarpage|label5">_Up to level:</property>
                         <property name="use-underline">True</property>
                         <property name="xalign">0</property>
                       </object>
@@ -429,13 +429,13 @@
                       <object class="GtkComboBoxText" id="level">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="tooltip-text" translatable="yes" context="fldvarpage|level|tooltip_text">Choose the heading number to prepend to the displayed field, where the number comes from the first prior heading with the selected outline level. If “None” is selected, then no heading number is displayed.</property>
+                        <property name="tooltip-text" translatable="yes" context="fldvarpage|level|tooltip_text">Choose heading number to prepend to displayed field, where the number comes from the first prior heading whose outline level is equal to or less than the selected outline level. If “None” is selected, no heading number is displayed.</property>
                         <items>
                           <item translatable="yes" context="fldvarpage|level">None</item>
                         </items>
                         <child internal-child="accessible">
                           <object class="AtkObject" id="level-atkobject">
-                            <property name="AtkObject::accessible-description" translatable="yes" context="fldvarpage|extended_tip|level">Choose the heading number to prepend to the displayed field. The number comes from the first prior heading with the selected outline level. For example, select “2” to use the heading number of the first prior heading with outline level 2. If “None” is selected, then no heading number is displayed. To use this option, heading numbers must be enabled. Use “Tools - Heading Numbering”.</property>
+                            <property name="AtkObject::accessible-description" translatable="yes" context="fldvarpage|extended_tip|level">Choose heading number to prepend to displayed field, where the number comes from the first prior heading whose outline level is equal to or less than the selected outline level. For example, select “2” to use the heading number of the first prior heading that has outline level 2 or less. If “None” is selected, no heading number is displayed. To use this option, heading numbers must be enabled. Use “Tools - Heading Numbering”.</property>
                           </object>
                         </child>
                       </object>
@@ -470,7 +470,7 @@
                   <object class="GtkLabel" id="label4">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes" context="fldvarpage|label4">With Heading Number Before</property>
+                    <property name="label" translatable="yes" context="fldvarpage|label4">With Heading Number</property>
                     <property name="use-underline">True</property>
                     <property name="xalign">0</property>
                     <attributes>
