Resolves tdf#153735 - No outline level should not be called Text Body
Changed to [None]

Change-Id: I841664f432d9235ac5486af7d27ba141ce35cd48
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148562
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/numparapage.ui
+++ b/sw/uiconfig/swriter/ui/numparapage.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="sw">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="adjustmentNF_RESTART_PARA">
@@ -56,7 +56,7 @@
                 <property name="can-focus">False</property>
                 <property name="tooltip-text" translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Assigned Outline Level</property>
                 <items>
-                  <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Text Body</item>
+                  <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">[None]</item>
                   <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Level 1</item>
                   <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Level 2</item>
                   <item translatable="yes" context="numparapage|comboLB_OUTLINE_LEVEL">Level 3</item>
